--- a/index.html
+++ b/index.html
@@ -212,6 +212,17 @@
             </div>
             <div class="divisao3">
               <li class="botao">
+                <a href="https://www.livebingo.app/" target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/LiveBingo.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Live Bingo</p>
+            </div>
+            <div class="divisao3">
+              <li class="botao">
                 <a href="https://loldle.net" target="_blank"
                   ><img
                     class="imagelogo"
@@ -250,6 +261,9 @@
               </li>
               <p class="button-word">Musicle</p>
             </div>
+          </ul>
+        <div id="redes-sociais4" class="rs-flx">
+          <ul>
             <div class="divisao3">
               <li class="botao">
                 <a
@@ -263,9 +277,6 @@
               </li>
               <p class="button-word">SongTrivia</p>
             </div>
-          </ul>
-        <div id="redes-sociais4" class="rs-flx">
-          <ul>
             <div class="divisao4">
               <li class="botao">
                 <a
