--- a/index.html
+++ b/index.html
@@ -264,7 +264,20 @@
           </ul>
         <div id="redes-sociais4" class="rs-flx">
           <ul>
-            <div class="divisao3">
+            <div class="divisao4">
+              <li class="botao">
+                <a
+                  href="https://songbattle.io"
+                  target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/SongBattle.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">SongBattle</p>
+            </div>
+            <div class="divisao4">
               <li class="botao">
                 <a
                   href="https://songtrivia2.io/pt"
