--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   ><img class="imagelogo" src="images/Akinator.png" alt=""
                 /></a>
               </li>
-              <p class="button-word1" id="bftc">Akinator</p>
+              <p class="button-word1" >Akinator</p>
             </div>
             <div class="divisao">
               <li class="botao">
@@ -338,7 +338,7 @@
                   ><img class="imagelogo" src="images/WordsonStream.png" alt=""
                 /></a>
               </li>
-              <p class="button-word">Words on Stream</p>
+              <p class="button-word" id="wos">Words on Stream</p>
             </div>
           </ul>
         </div>
