--- a/index.html
+++ b/index.html
@@ -74,6 +74,32 @@
             <div class="divisao">
               <li class="botao">
                 <a
+                  href="https://www.cinenerdle.app/"
+                  target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Cinerdle.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word1">CineNerdle</p>
+            </div>
+            <div class="divisao">
+              <li class="botao">
+                <a
+                  href="https://connectthestars.xyz/"
+                  target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Connectthestars.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word1">Connect the Stars</p>
+            </div>
+            <div class="divisao">
+              <li class="botao">
+                <a
                   href="https://conexo.ws/"
                   target="_blank"
                   ><img
@@ -84,7 +110,11 @@
               </li>
               <p class="button-word1">Conexo</p>
             </div>
-            <div class="divisao">
+          </ul>
+        </div>
+        <div id="redes-sociais2" class="rs-flx">
+          <ul>
+            <div class="divisao2">
               <li class="botao">
                 <a
                   href="https://contexto.me/"
@@ -97,7 +127,7 @@
               </li>
               <p class="button-word1">Contexto</p>
             </div>
-            <div class="divisao">
+            <div class="divisao2">
               <li class="botao">
                 <a
                   href="https://www.flagle.io/"
@@ -107,10 +137,6 @@
               </li>
               <p class="button-word1">Flagle</p>
             </div>
-          </ul>
-        </div>
-        <div id="redes-sociais2" class="rs-flx">
-          <ul>
             <div class="divisao2">
               <li class="botao">
                 <a
@@ -176,7 +202,11 @@
               </li>
               <p class="button-word">Geoguessr</p>
             </div>
-            <div class="divisao2">
+          </ul>
+        </div>
+        <div id="redes-sociais2" class="rs-flx">
+          <ul>
+            <div class="divisao3">
               <li class="botao">
                 <a href="https://globle-game.com" target="_blank"
                   ><img class="imagelogo" src="images/Globle.png" alt=""
@@ -184,10 +214,6 @@
               </li>
               <p class="button-word">Globle</p>
             </div>
-          </ul>
-        </div>
-        <div id="redes-sociais2" class="rs-flx">
-          <ul>
             <div class="divisao3">
               <li class="botao">
                 <a href="https://guess-the-date.com/" target="_blank"
@@ -264,6 +290,19 @@
           </ul>
         <div id="redes-sociais4" class="rs-flx">
           <ul>
+            <div class="divisao4">
+              <li class="botao">
+                <a
+                  href="https://neal.fun/"
+                  target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/nealfun.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Neal.Fun</p>
+            </div>
             <div class="divisao4">
               <li class="botao">
                 <a
