--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
             <div class="divisao">
               <li class="botao">
                 <a
+                  href="https://www.chronophoto.app/"
+                  target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Chronophoto.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word1">Chrono Photo</p>
+            </div>
+            <div class="divisao">
+              <li class="botao">
+                <a
                   href="https://www.cinenerdle.app/"
                   target="_blank"
                   ><img
@@ -194,7 +207,11 @@
               </li>
               <p class="button-word">Gartic Show</p>
             </div>
-            <div class="divisao2">
+          </ul>
+        </div>
+        <div id="redes-sociais2" class="rs-flx">
+          <ul>
+            <div class="divisao3">
               <li class="botao">
                 <a href="https://www.geoguessr.com/pt" target="_blank"
                   ><img class="imagelogo" src="images/Geoguessr.png" alt=""
@@ -202,10 +219,6 @@
               </li>
               <p class="button-word">Geoguessr</p>
             </div>
-          </ul>
-        </div>
-        <div id="redes-sociais2" class="rs-flx">
-          <ul>
             <div class="divisao3">
               <li class="botao">
                 <a href="https://globle-game.com" target="_blank"
@@ -224,6 +237,28 @@
                 /></a>
               </li>
               <p class="button-word">Guess the Date</p>
+            </div>
+            <div class="divisao3">
+              <li class="botao">
+                <a href="https://guessthe.game/" target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Guessthegame.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Guess the Game</p>
+            </div>
+            <div class="divisao3">
+              <li class="botao">
+                <a href="https://guesstherank.org/" target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Guesstherank.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Guess the Rank</p>
             </div>
             <div class="divisao3">
               <li class="botao">
@@ -249,6 +284,20 @@
             </div>
             <div class="divisao3">
               <li class="botao">
+                <a href="https://listed.fun/" target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Listed.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Listed</p>
+            </div>
+          </ul>
+        <div id="redes-sociais4" class="rs-flx">
+          <ul>
+            <div class="divisao4">
+              <li class="botao">
                 <a href="https://loldle.net" target="_blank"
                   ><img
                     class="imagelogo"
@@ -258,7 +307,7 @@
               </li>
               <p class="button-word">Loldle</p>
             </div>
-            <div class="divisao3">
+            <div class="divisao4">
               <li class="botao">
                 <a href="https://makeitmeme.com/pt/" target="_blank"
                   ><img
@@ -269,7 +318,7 @@
               </li>
               <p class="button-word">Make it Meme</p>
             </div>
-            <div class="divisao3">
+            <div class="divisao4">
               <li class="botao">
                 <a
                   href="https://likewisetv.com/arcade/moviedle"
@@ -279,7 +328,7 @@
               </li>
               <p class="button-word">Moviedle</p>
             </div>
-            <div class="divisao3">
+            <div class="divisao4">
               <li class="botao">
                 <a href="https://musicle.app" target="_blank"
                   ><img class="imagelogo" src="images/Musicle.png" alt=""
@@ -287,9 +336,6 @@
               </li>
               <p class="button-word">Musicle</p>
             </div>
-          </ul>
-        <div id="redes-sociais4" class="rs-flx">
-          <ul>
             <div class="divisao4">
               <li class="botao">
                 <a
@@ -306,6 +352,19 @@
             <div class="divisao4">
               <li class="botao">
                 <a
+                  href="https://rankdle.com/"
+                  target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Rankdle.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Rankdle</p>
+            </div>
+            <div class="divisao4">
+              <li class="botao">
+                <a
                   href="https://songbattle.io"
                   target="_blank"
                   ><img
@@ -316,7 +375,11 @@
               </li>
               <p class="button-word">SongBattle</p>
             </div>
-            <div class="divisao4">
+          </ul>
+        </div>
+        <div id="redes-sociais5" class="rs-flx">
+          <ul>
+            <div class="divisao5">
               <li class="botao">
                 <a
                   href="https://songtrivia2.io/pt"
@@ -329,7 +392,7 @@
               </li>
               <p class="button-word">SongTrivia</p>
             </div>
-            <div class="divisao4">
+            <div class="divisao5">
               <li class="botao">
                 <a
                   href="https://stopots.com/pt"
@@ -342,7 +405,7 @@
               </li>
               <p class="button-word">Stopots</p>
             </div>
-            <div class="divisao4">
+            <div class="divisao5">
               <li class="botao">
                 <a
                   href="https://term.ooo"
@@ -352,7 +415,29 @@
               </li>
               <p class="button-word">Termo</p>
             </div>
-            <div class="divisao4">
+            <div class="divisao5">
+              <li class="botao">
+                <a href="https://www.timeguessr.com/" target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Timeguessr.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Timeguessr</p>
+            </div>
+            <div class="divisao5">
+              <li class="botao">
+                <a href="https://games.oec.world/en/tradle/" target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Tradle.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Tradle</p>
+            </div>
+            <div class="divisao5">
               <li class="botao">
                 <a href="https://new.uwufufu.com" target="_blank"
                   ><img
@@ -363,7 +448,7 @@
               </li>
               <p class="button-word">UwUFUFU</p>
             </div>
-            <div class="divisao4">
+            <div class="divisao5">
               <li class="botao">
                 <a href="https://whatsamook.games/mu" target="_blank"
                   ><img class="imagelogo" src="images/Whatsamusic.png" alt=""
@@ -371,7 +456,7 @@
               </li>
               <p class="button-word">Whatsamusic</p>
             </div>
-            <div class="divisao4">
+            <div class="divisao5">
               <li class="botao">
                 <a href="https://wos.gg/pt" target="_blank"
                   ><img class="imagelogo" src="images/WordsonStream.png" alt=""
