--- a/index.html
+++ b/index.html
@@ -375,11 +375,7 @@
               </li>
               <p class="button-word">SongBattle</p>
             </div>
-          </ul>
-        </div>
-        <div id="redes-sociais5" class="rs-flx">
-          <ul>
-            <div class="divisao5">
+            <div class="divisao4">
               <li class="botao">
                 <a
                   href="https://songtrivia2.io/pt"
@@ -392,6 +388,10 @@
               </li>
               <p class="button-word">SongTrivia</p>
             </div>
+          </ul>
+        </div>
+        <div id="redes-sociais5" class="rs-flx">
+          <ul>
             <div class="divisao5">
               <li class="botao">
                 <a
@@ -436,6 +436,17 @@
                 /></a>
               </li>
               <p class="button-word">Tradle</p>
+            </div>
+            <div class="divisao5">
+              <li class="botao">
+                <a href="https://travle.earth/" target="_blank"
+                  ><img
+                    class="imagelogo"
+                    src="images/Travle.png"
+                    alt=""
+                /></a>
+              </li>
+              <p class="button-word">Travle</p>
             </div>
             <div class="divisao5">
               <li class="botao">
