--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   target="_blank"
                   ><img
                     class="imagelogo"
-                    src="images/Chronophoto.png"
+                    src="images/Chronophoto.jpg"
                     alt=""
                 /></a>
               </li>
